# ctodashboard

./: .cursor-context  .cursorignore  .cursorrules  .env.example  .gitignore  .railwayignore  ARCHITECTURE-OVERVIEW.md  AWS-PERMISSIONS-FIX.json  CHANGELOG.md  CHATBOT-IMPLEMENTATION-GUIDE.md  CLAUDE.md  CTO-INSIGHTS-GUIDE.md  CURRENT_ARCHITECTURE_SNAPSHOT.md  DECISION-MATRIX.md  GITHUB-INTEGRATION-COMPLETE.md  LLM-CHATBOT-INTEGRATION.md  MASTER-ARCHITECTURE-DOCUMENT.md  MCP-INTEGRATION-GUIDE.md  Makefile  PORT_CONFIG.json  PRE-SESSION-COMPLIANCE-CHECKLIST.md  PROJECT_STATUS.md  Procfile  QUICK-PERMISSIONS-FIX.md  RAILWAY_CHECKLIST.md  README-SIMPLE.md  README.md  REAL-TIME-COMPLIANCE-MONITORING.md  RELEASE_PLAN.md  SECURITY_IMPLEMENTATION.md  SERVICE-CONFIGURATION-PLAN.md  SESSION-START-PROTOCOL.md  SETUP-TOKENS.md  SUPABASE_MIGRATION_PLAN.md  app.py  backup_restore.py  connector_architecture_proposal.md  cookies.txt  cursor.config.json  debug_db_path.py  (+62 more)
_attic/: README.md  api_index_vercel_legacy.py  assignment_service.py  aws_metrics_old.py  contracts-baseline_api_all-metrics_ideptech.raw.json  contracts-baseline_api_assignments.raw.json  contracts-baseline_api_aws-metrics.raw.json  contracts-baseline_api_feature-flags.raw.json  contracts-baseline_api_github-metrics_ideptech.raw.json  contracts-baseline_api_jira-metrics_ideptech.keys.txt  contracts-baseline_api_jira-metrics_ideptech.raw.json  contracts-baseline_health.raw.json  integrated_dashboard_inline_classes.py  render-simple.yaml  vercel.json
api/: index.py
backend/: .env.example  activate.sh  debug_github.py  (+6 more)
(+316 files in other folders)
